--- a/index.couvert.html
+++ b/index.couvert.html
@@ -31,7 +31,7 @@
   .btn{appearance:none;border:1px solid var(--line);background:#fff;border-radius:10px;padding:8px 12px;font-size:14px;cursor:pointer}
   #loading{position:fixed;inset:0;background:rgba(255,255,255,0.85);display:flex;align-items:center;justify-content:center;font-size:18px;font-weight:800;color:#0b1220;z-index:100}
 
-  /* bloco dentro do card de pagamentos */
+  /* blocos dentro do card de pagamentos */
   .pay-break{display:flex;gap:18px;flex-wrap:wrap;margin-top:6px}
   .pill{display:inline-flex;gap:6px;align-items:center;border:1px solid var(--line);border-radius:999px;padding:6px 10px;font-weight:700;background:#fff}
   .pill .tag{font-size:11px;color:var(--muted);font-weight:700;text-transform:uppercase;letter-spacing:.2px}
@@ -45,7 +45,7 @@
   /* MODAL bottom sheet */
   .modal{position:fixed;inset:0;background:rgba(2,6,23,.5);display:none;z-index:120}
   .sheet{position:absolute;left:0;right:0;bottom:0;background:#fff;border-radius:20px 20px 0 0;border:1px solid var(--line);box-shadow:var(--shadow);max-height:85vh;display:flex;flex-direction:column}
-  .sheet header{background:#fff;color:var(--text);padding:12px 16px;border-bottom:1px solid var(--line);border-radius:20px 20px 0 0}
+  .sheet header{background:#fff;color:#000;padding:12px 16px;border-bottom:1px solid var(--line);border-radius:20px 20px 0 0}
   .sheet header h3{margin:0;font-size:16px;font-weight:800}
   .sheet header small{color:var(--muted)}
   .sheet .content{overflow:auto;padding:10px 12px}
@@ -69,13 +69,24 @@
 <div id="loading">⏳ Carregando dados…</div>
 
 <div class="wrap">
-  <!-- Filtros -->
+  <!-- Filtros separados -->
   <div class="card">
-    <div style="display:flex;gap:14px;flex-wrap:wrap;align-items:center">
-      <div><label>Data início: <input type="date" id="fDataIni"></label></div>
-      <div><label>Data fim: <input type="date" id="fDataFim"></label></div>
-      <button class="btn" id="btnAplicar">Aplicar</button>
+    <div style="display:flex;gap:18px;flex-wrap:wrap;align-items:end">
+      <div>
+        <div style="font-weight:800;margin-bottom:4px">Pagamentos</div>
+        <label>Início: <input type="date" id="fPIni"></label>
+        <label style="margin-left:8px">Fim: <input type="date" id="fPFim"></label>
+      </div>
+
+      <div>
+        <div style="font-weight:800;margin-bottom:4px">ABC (Arrecadação)</div>
+        <label>Início: <input type="date" id="fAIni"></label>
+        <label style="margin-left:8px">Fim: <input type="date" id="fAFim"></label>
+      </div>
+
+      <button class="btn" id="btnAplicar">Aplicar filtros</button>
     </div>
+
     <div style="margin-top:10px">
       <strong>Empresas:</strong>
       <div id="chipsEmpresas"></div>
@@ -207,12 +218,9 @@ async function fetchPagamentos(){
   pagamentosAll = list.map(p=>({
     empresa: p.empresa || p.Empresa || "",
     fornecedor: p.fornecedor || p["Cliente / Fornecedor"] || "",
-    // vencimento é a data base para “a pagar” quando sem liquidação
     vencimento: isoFromStr(p.Vencimento || p.vencimento || p["Vencimento"]),
-    // data do pagamento efetivo:
     data_pagamento: p.data_pagamento || isoFromStr(p.Liquidação || p.Liquidacao || p.liquidacao),
-    // **Valor Bruto** como base oficial
-    valor: cleanNumber(p["Valor Bruto"] ?? p.valor ?? 0),
+    valor: cleanNumber(p["Valor Bruto"] ?? p.valor ?? 0), // **Valor Bruto**
     meio_pagamento: p.meio_pagamento || p["Meio de Pagamento"] || "",
     historico: p.historico || p["Histórico"] || ""
   }));
@@ -244,7 +252,6 @@ function coletarEmpresas(){
   const merc = empresas.find(e=>String(e).toLowerCase().includes(DEFAULT_EMPRESA));
   if(merc) empresasSelecionadas.add(merc); else empresas.forEach(e=>empresasSelecionadas.add(e));
 }
-
 function renderChips(){
   const host=$("#chipsEmpresas"); host.innerHTML="";
   const all=document.createElement("span");
@@ -282,7 +289,6 @@ async function openHistoricoFornecedor(fornecedor){
     if(!r.ok) throw new Error("HTTP "+r.status);
     const js = await r.json();
 
-    // Garante que só mostre do fornecedor selecionado
     const arrBase = (js.registros || []);
     const arr = arrBase.filter(p => {
       const f = (p.fornecedor || p["Cliente / Fornecedor"] || "").trim();
@@ -322,34 +328,36 @@ async function openHistoricoFornecedor(fornecedor){
 
 /* === RENDER PRINCIPAL === */
 function aplicar(){
-  const a = $("#fDataIni").value ? new Date($("#fDataIni").value) : null;
-  const b = $("#fDataFim").value ? new Date($("#fDataFim").value) : null;
+  // Intervalos separados
+  const pIni = $("#fPIni").value ? new Date($("#fPIni").value) : null;
+  const pFim = $("#fPFim").value ? new Date($("#fPFim").value) : null;
+  const aIni = $("#fAIni").value ? new Date($("#fAIni").value) : null;
+  const aFim = $("#fAFim").value ? new Date($("#fAFim").value) : null;
 
-  // Filtro por empresa e intervalo
-  const filtroEmpresa = (empresa) => (empresasSelecionadas.has(empresa) || (empresasSelecionadas.size===empresas.length));
+  const filtroEmp = (empresa)=> (empresasSelecionadas.has(empresa) || (empresasSelecionadas.size===empresas.length));
 
-  // Pago = tem data_pagamento
+  // PAGOS: data_pagamento dentro do intervalo de pagamentos
   const pagos = pagamentosAll.filter(p=>{
-    const okEmp = filtroEmpresa(p.empresa);
+    const okEmp = filtroEmp(p.empresa);
     const d = p.data_pagamento ? parseISO(p.data_pagamento) : null;
-    return okEmp && d && inRange(d,a,b);
+    return okEmp && d && inRange(d,pIni,pFim);
   });
 
-  // A pagar = NÃO tem data_pagamento; usa VENCIMENTO para o filtro
+  // A PAGAR: sem data_pagamento, usa VENCIMENTO no intervalo de pagamentos
   const abertos = pagamentosAll.filter(p=>{
-    const okEmp = filtroEmpresa(p.empresa);
-    const d = p.data_pagamento ? null : (p.vencimento ? new Date(p.vencimento) : null);
-    return okEmp && d && inRange(d,a,b) && !p.data_pagamento;
+    const okEmp = filtroEmp(p.empresa);
+    const d = !p.data_pagamento && p.vencimento ? new Date(p.vencimento) : null;
+    return okEmp && d && inRange(d,pIni,pFim) && !p.data_pagamento;
   });
 
-  // Arrecadação filtrada (se tiver empresa no ABC, respeita; se não, soma geral)
+  // ABC: usa intervalo próprio (aIni/aFim)
   const arrs = abcAll.filter(x=>{
     const d = new Date(x.data);
-    const okEmp = x.empresa ? filtroEmpresa(x.empresa) : filtroEmpresa((empresas[0]||"")); // fallback: soma geral
-    return okEmp && inRange(d,a,b);
+    const okEmp = x.empresa ? filtroEmp(x.empresa) : filtroEmp((empresas[0]||""));
+    return okEmp && inRange(d,aIni,aFim);
   });
 
-  // Somatórios (todos por Valor Bruto)
+  // Somatórios (sempre Valor Bruto)
   const somaPago   = pagos.reduce((s,p)=>s+cleanNumber(p.valor),0);
   const somaApagar = abertos.reduce((s,p)=>s+cleanNumber(p.valor),0);
   const somaTotal  = somaPago + somaApagar;
@@ -365,7 +373,7 @@ function aplicar(){
   $("#kTotal").textContent       = brl(somaTotal);
   $("#kResultado").innerHTML     = `${brl(resultado)} <span class="badge ${resultado>=0?"lucr":"prej"}">${resultado>=0?"LUCRO":"PREJUÍZO"}</span>`;
 
-  // Lista A PAGAR no card
+  // A PAGAR (lista no card)
   const tbA=$("#tblApagar tbody"); tbA.innerHTML="";
   $("#qtApagar").textContent = abertos.length;
   if(abertos.length===0){
@@ -385,7 +393,7 @@ function aplicar(){
       });
   }
 
-  // Detalhes (somente pagos)
+  // Detalhes (somente pagos, usando intervalo de pagamentos)
   const tb=$("#tblPagamentos tbody"); tb.innerHTML="";
   if(pagos.length===0){ $("#msgEmpty").style.display="block"; } else { $("#msgEmpty").style.display="none"; }
   if (matchMedia("(max-width: 768px)").matches){
@@ -415,24 +423,28 @@ function aplicar(){
     });
   }
 
-  // Resumo por empresa (usando Bruto)
+  // Resumo por empresa (ABC com range ABC e Pagamentos com range Pagamentos)
   const rb=$("#tblResumoEmp tbody"); rb.innerHTML="";
   empresas.forEach(emp=>{
+    // pagamentos por empresa dentro do range de pagamentos
     const pPago = pagamentosAll.filter(p=>{
       const d= p.data_pagamento ? parseISO(p.data_pagamento) : null;
-      return p.empresa===emp && d && inRange(d,a,b);
+      return p.empresa===emp && d && inRange(d,pIni,pFim);
     });
     const pAber = pagamentosAll.filter(p=>{
       const d= !p.data_pagamento && p.vencimento ? new Date(p.vencimento) : null;
-      return p.empresa===emp && d && inRange(d,a,b) && !p.data_pagamento;
+      return p.empresa===emp && d && inRange(d,pIni,pFim) && !p.data_pagamento;
     });
+    // arrecadação por empresa dentro do range do ABC
     const aEmp = abcAll.filter(x=>{
       const d=new Date(x.data);
-      return (x.empresa? x.empresa===emp : true) && inRange(d,a,b);
+      return (x.empresa? x.empresa===emp : true) && inRange(d,aIni,aFim);
     });
+
     const tP = pPago.reduce((s,p)=>s+cleanNumber(p.valor),0) + pAber.reduce((s,p)=>s+cleanNumber(p.valor),0);
     const tA = aEmp.reduce((s,x)=>s+cleanNumber(x.faturamento),0);
     const tR = tA - tP;
+
     const tr=document.createElement("tr");
     tr.innerHTML=`<td>${emp}</td>
                   <td>${abcLoaded? brl(tA) : "⏳"}</td>
@@ -447,12 +459,17 @@ document.getElementById("btnAplicar").onclick=aplicar;
 
 (async function init(){
   const now=new Date();
-  const ini=new Date(now.getFullYear(),now.getMonth(),1).toISOString().slice(0,10);
-  const fim=new Date(now.getFullYear(),now.getMonth()+1,0).toISOString().slice(0,10);
-  $("#fDataIni").value=ini; $("#fDataFim").value=fim;
+
+  // Defaults: mês atual para ambos os grupos (pode ajustar como preferir)
+  const pIni=new Date(now.getFullYear(),now.getMonth(),1).toISOString().slice(0,10);
+  const pFim=new Date(now.getFullYear(),now.getMonth()+1,0).toISOString().slice(0,10);
+  const aIni=pIni, aFim=pFim;
+
+  $("#fPIni").value=pIni; $("#fPFim").value=pFim;
+  $("#fAIni").value=aIni; $("#fAFim").value=aFim;
 
   try{
-    await fetchPagamentos();     // rápido
+    await fetchPagamentos();
     coletarEmpresas(); renderChips();
     aplicar();
     $("#loading").style.display="none";
